Remove superfluous examples and fix alignment

--- a/app/styles/_shame.scss
+++ b/app/styles/_shame.scss
@@ -68,7 +68,7 @@
 }
 
 .au-c-card + .au-c-card {
-  border-top: 0;
+  margin-top: .5rem;
 }
 
 .au-c-card--fill {
@@ -78,6 +78,11 @@
 .au-c-card__header.au-c-card__header--clickable + .au-c-card__content{
   margin-top: $au-unit/2;
   padding-top: $au-unit/2;
+}
+
+.au-c-content > div + div,
+.au-c-content > div + .au-c-button {
+  margin-top: .5rem;
 }
 
 .au-c-card--flex .au-c-card__header > div {
